tiny bit of text arrow overlapping fix on phone

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -50,3 +50,9 @@
     font-size: 200%;
   }
 }
+
+@media screen and (max-width: 350px) {
+  .Banner h2 {
+    font-size: 180%;
+  }
+}
